<resources>
    <string name="app_name">Anemi</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo">ANNEMI</string>
    <string name="or_label">OR</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forget">FORGET PASSWORD?</string>
    <string name="save">SAVE</string>
    <string name="back">BACK</string>
    <string name="sign_admin">SIGN IN AS ADMIN</string>
    <string name="back_sign_in">BACK TO SIGN IN</string>
    <string name="back_user_sign_in">BACK TO USER SIGN IN</string>
    <string name="add_photo">ADD PHOTO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="user_manage">MANAGE USER</string>
    <string name="book_manage">MANAGE BOOK</string>
    <string name="user_profile">USER PROFILE</string>
    <string name="username_label">USER:</string>
    <string name="phone_label">PHONE:</string>
    <string name="username">USERNAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="re_password">RE-PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="phone">PHONE</string>
    <string name="photo">Profile Photo</string>
    <string name="title">TITLE</string>
    <string name="author">AUTHOR</string>
    <string name="description">DESCRIPTION</string>
    <string name="logout">LOGOUT</string>
    <string name="search">SEARCH</string>
    <string name="add">ADD</string>
    <string name="edit">EDIT</string>
    <string name="filter">FILTER</string>
    <string name="page_number">Page No:</string>
    <string name="username_label_long">USERNAME:</string>
    <string name="email_label_long">EMAIL:</string>
    <string name="role_label">ROLE:</string>
    <string name="phone_label_long">PHONE:</string>
    <string name="book_label">BOOK TITLE:</string>
    <string name="author_label">AUTHOR:</string>
    <string name="description_label">DESCRIPTION:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_message">WELCOME BACK!!!</string>
    <string name="setting">SETTING</string>
    <string name="about">ABOUT US</string>
    <string name="app_info">APP INFO</string>
    <string name="contact_info">CONTACT US</string>
    <string name="fab">FLOATING ACTION BUTTON</string>
    <string name="error_photo">Please select a Photo!</string>
    <string name="search_bar">Search Book Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>