<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/baseline_home_24" />
        <item
            android:id="@+id/nav_user_manage"
            android:icon="@drawable/baseline_manage_accounts_24"
            android:title="@string/user_manage" />
        <item
            android:id="@+id/nav_user_profile"
            android:title="@string/user_profile"
            android:icon="@drawable/baseline_person_24" />
    </group>
<!--    <group android:checkableBehavior="single">-->
<!--        <item-->
<!--            android:id="@+id/search"-->
<!--            android:icon="@drawable/baseline_search_24"-->
<!--            android:title="@string/search"-->
<!--            app:showAsAction="ifRoom" />-->
<!--        <item-->
<!--            android:id="@+id/add"-->
<!--            android:icon="@drawable/baseline_add_24"-->
<!--            android:title="@string/add"-->
<!--            app:showAsAction="ifRoom" />-->
<!--        <item-->
<!--            android:id="@+id/logout"-->
<!--            android:icon="@drawable/baseline_logout_24"-->
<!--            android:title="@string/logout"-->
<!--            app:showAsAction="ifRoom" />-->
<!--    </group>-->
    <item
        android:id="@+id/menu_setting"
        android:title="@string/setting"
        android:icon="@drawable/baseline_settings_24" >
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
    <item
        android:id="@+id/about_us"
        android:title="@string/about">
        <menu>
            <item
                android:id="@+id/app_info"
                android:icon="@drawable/baseline_info_24"
                android:title="@string/app_info"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/contact_info"
                android:icon="@drawable/baseline_phone_24"
                android:title="@string/contact_info"
                android:checkable="true"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>