<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_gravity="center_vertical|center_horizontal"
tools:context=".ui.fragments.dialog.DialogUpdateBookFragment" >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="20dp" >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:hintTextColor="#DA0037"
            app:startIconTint="#DA0037"
            app:startIconContentDescription="@string/title"
            app:startIconDrawable="@drawable/baseline_menu_book_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/author"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:hint="@string/author"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:hintTextColor="#DA0037"
            app:startIconTint="#DA0037"
            app:startIconContentDescription="@string/author"
            app:startIconDrawable="@drawable/baseline_person_4_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:hint="@string/description"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:hintTextColor="#DA0037"
            app:startIconTint="#DA0037"
            app:startIconContentDescription="@string/description"
            app:startIconDrawable="@drawable/baseline_description_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAddCover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/add_photo"
            android:layout_gravity="start"
            android:textColor="#FFFFFF"
            app:backgroundTint="#DA0037"
            app:cornerRadius="25dp" />

        <ImageView
            android:id="@+id/book_cover"
            android:layout_width="370dp"
            android:layout_height="370dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/list_border"
            android:contentDescription="@string/user_profile"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/baseline_insert_photo_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/back"
                android:textColor="#FFFFFF"
                app:backgroundTint="#DA0037"
                app:cornerRadius="25dp" />

            <Button
                android:id="@+id/btnSaveBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/save"
                android:textColor="#FFFFFF"
                app:backgroundTint="#DA0037"
                app:cornerRadius="25dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
</FrameLayout>