<?xml version="1.0" encoding="utf-8"?>
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".UserProfileFragment">-->

<!--    &lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;-->
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/user_profile"-->
<!--        android:textSize="25dp"-->
<!--        android:layout_centerInParent="true" />-->

<!--</RelativeLayout>-->

<!--    <?xml version="1.0" encoding="utf-8"?>-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_gravity="center_vertical|center_horizontal"
android:layout_width="match_parent"
android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".ui.fragments.fragment.UserProfileFragment">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/circle"
            android:contentDescription="@string/user_profile"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:transitionName="logo_image"
            app:srcCompat="@drawable/baseline_person_outline_24" />

        <TextView
            android:id="@+id/lbl_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/error"
            android:textSize="12sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonAddPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/add_photo"
            android:textColor="#FFFFFF"
            app:backgroundTint="#DA0037"
            app:cornerRadius="25dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/username"
            android:transitionName="username_input"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:hintTextColor="#DA0037"
            app:startIconContentDescription="@string/username"
            app:startIconDrawable="@drawable/baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:hintTextColor="#DA0037"
            app:startIconContentDescription="@string/email"
            app:startIconDrawable="@drawable/baseline_mail_outline_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:hint="@string/new_password"
            android:transitionName="password_input"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:endIconMode="password_toggle"
            app:hintTextColor="#DA0037"
            app:passwordToggleEnabled="true"
            app:startIconContentDescription="@string/new_password"
            app:startIconDrawable="@drawable/baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/re_password"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:hint="@string/re_password"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:endIconMode="password_toggle"
            app:hintTextColor="#DA0037"
            app:passwordToggleEnabled="true"
            app:startIconContentDescription="@string/re_password"
            app:startIconDrawable="@drawable/baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/phone"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:hintTextColor="#DA0037"
            app:startIconContentDescription="@string/phone"
            app:startIconDrawable="@drawable/baseline_smartphone_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            android:textColor="#FFFFFF"
            app:backgroundTint="#DA0037"
            app:cornerRadius="25dp" />

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/btnSignAdmin"-->
<!--            style="@style/Widget.Material3.Button.Icon"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="5dp"-->
<!--            android:onClick="btnBackToSignInOnClick"-->
<!--            android:text="@string/back_sign_in"-->
<!--            android:textColor="#DA0037"-->
<!--            android:textSize="14sp"-->
<!--            android:textStyle="bold"-->
<!--            app:backgroundTint="#00DA0037"-->
<!--            app:cornerRadius="25dp"-->
<!--            app:icon="@drawable/baseline_login_24"-->
<!--            app:iconTint="#DA0037">-->
<!--        </com.google.android.material.button.MaterialButton>-->
    </LinearLayout>
</ScrollView>