<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context=".BookDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_tool_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/profile_menu"
            app:navigationIcon="@drawable/baseline_menu_24"
            app:navigationIconTint="#FFFFFF"
            app:subtitleTextColor="#FFFFFF"
            app:title="Anemi"
            app:titleTextColor="#FFFFFF" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/book_title_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_label"
                android:textAlignment="viewStart"
                android:textColor="#D90037"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/label_border"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/author_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/author_label"
                android:textAlignment="viewStart"
                android:textColor="#D90037"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/label_border"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description_label"
                android:textAlignment="viewStart"
                android:textColor="#D90037"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/label_border"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/book_cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/user_profile"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/baseline_insert_photo_24" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>